--- a/client/index.html
+++ b/client/index.html
@@ -3,3 +3,4 @@
 <main></main>
 <script src="/bundle.js"></script>
 <link rel="stylesheet" href="/bundle.css" />
+<link rel="stylesheet" href="https://use.typekit.net/wyn2uzm.css" />
