updated several file

--- a/client/index.html
+++ b/client/index.html
@@ -2,5 +2,6 @@
 <title></title>
 <main></main>
 <script src="/bundle.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/bundle.css" />
 <link rel="stylesheet" href="https://use.typekit.net/wyn2uzm.css" />
