--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
-<title></title>
-<main></main>
-<script src="/bundle.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="/bundle.css" />
-<link rel="stylesheet" href="https://use.typekit.net/wyn2uzm.css" />
+<html>
+    <head>
+        <title></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    </head>
+    <body>
+        <main></main>
+        <script src="/bundle.js"></script>
+        <link
+            href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+            integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"
+        />
+
+        <link rel="stylesheet" href="/bundle.css" />
+        <link rel="stylesheet" href="https://use.typekit.net/wyn2uzm.css" />
+    </body>
+</html>
