--- a/client/index.html
+++ b/client/index.html
@@ -24,5 +24,10 @@
 
         <link rel="stylesheet" href="/bundle.css" />
         <link rel="stylesheet" href="https://use.typekit.net/wyn2uzm.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+        />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 </html>
